--- a/src/app/modules/gaming/components/game/game.component.html
+++ b/src/app/modules/gaming/components/game/game.component.html
@@ -15,7 +15,7 @@
         </span>
         <span class="example-fill-remaining-space"></span>
         <span>
-          <mat-chip color="{{ genereateColorForMetrics(game) }}" selected class="px-2 py-2">
+          <mat-chip color="{{ genereateColorForMetrics(game.metacritic) }}" selected class="px-2 py-2">
             {{ game.metacritic === null ? 'No score' : game.metacritic }}
           </mat-chip>
         </span>
