--- a/src/app/modules/gaming/components/game/game.component.html
+++ b/src/app/modules/gaming/components/game/game.component.html
@@ -32,7 +32,7 @@
         <mat-list-item role="listitem">
           <span>Chart: </span>
           <span class="example-fill-remaining-space"></span>
-          <span><strong>#{{ game?.charts.year.position }}</strong> Top {{ game?.charts?.year?.year }}</span>
+          <span><strong>#{{ game?.charts?.year?.position }}</strong> Top {{ game?.charts?.year?.year }}</span>
         </mat-list-item>
         <mat-list-item role="listitem">
           <span>Playtime: </span>
